# Multi-platform-screen-grabbing-utility

./: Cargo.toml  MULTY-PLATTFOMR_SCREEN_GRABBER.pptx
src/: hotkeys.rs  image_handler.rs  image_processing.rs  lib.rs  main.rs  modify_image.rs  screen_capture.rs  screenshot.rs
src/UI/: home.rs  modify.rs  settings.rs
src/ui/: home.rs  modify.rs  settings.rs
