[package]
name = "multi-platform-screen-grabbing-utility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.10.0"
rdev = "0.5.3"
image = "0.24.8"
screenshots = "0.8.7"
arboard = "3.3.0"
notifica = "3.0.2"
log = "0.4.20"
env_logger = "0.11.1"