[package]
name = "multi-platform-screen-grabbing-utility"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.10.0", features = ["advanced", "image"] }
tokio = { version = "1", features = ["full"] }
rdev = "0.5.3"
image = "0.24.8"
screenshots = "0.8.7"
arboard = "3.3.0"
chrono = "0.4"
imageproc = "0.23.0"